- Remove some parts from default Nice Blog Theme.

--- a/about.html
+++ b/about.html
@@ -12,7 +12,7 @@ permalink: /about/
 	</ul></p>
 
 <h2>About me</h2>
-<p>A programmer who wrote his first LOGO program 30+ years ago on an APPLE II. </p>
+<p>A programmer who wrote first LOGO program 30+ years ago on an APPLE II. </p>
     <p><ul class="about-list">
 		<li>
 			<i class="fa fa-twitter"></i><a href="https://twitter.com/{{ site.twitter_username }}"> Twitter</a>
