--- a/index.html
+++ b/index.html
@@ -13,5 +13,7 @@ layout: default
 </style>
 
 <center>
-	<p class="index-content">Hello World</p>
+	<p class="index-content">Homeless</p>
+	<p class="index-content">§¢§Ö§Ù§Õ§à§Þ§ß§í§Û</p>
+	<p class="index-content">ÎÞ¼Ò¿É¹é</p>
 </center>
