- Add 2 new posts for Reading notes. Both of them are incomplete.

--- a/index.html
+++ b/index.html
@@ -13,5 +13,5 @@ layout: default
 </style>
 
 <center>
-	<p class="index-content">无家可归 Бездомный Homeless </p>
+	<p class="index-content">Дом Бегемота</p>
 </center>
